--- a/Frogger/style.css
+++ b/Frogger/style.css
@@ -10,3 +10,31 @@
     height: 20px;
     width: 20px;
 }
+
+.ending-block{
+    background: red;
+}
+
+.starting-block{
+    background: blue;
+}
+
+.frog {
+    background-color: green;
+}
+
+.c1 {
+    background-color: black;
+}
+
+.c2, .c3{
+    background-color: grey;
+}
+
+.l1, .l2, .l3 {
+background-color: brown;
+}
+
+.l4, .l5 {
+    background-color: lightblue;
+}
