--- a/Tetris/style.css
+++ b/Tetris/style.css
@@ -15,3 +15,11 @@ div {
 .block{
     background-color: blue;
 }
+
+.block2{
+    background-color: purple;
+}
+
+.block3{
+    background-color: green;
+}
