--- a/breakout/style.css
+++ b/breakout/style.css
@@ -10,6 +10,13 @@
     width: 1px;
     height: 20px;
     background-color: blue;
-    left: 50px;
-    bottom: 50px;
+
+}
+
+.user{
+    position: absolute;
+    width: 1px;
+    height: 20px;
+    background-color: purple;
+
 }
