--- a/breakout/style.css
+++ b/breakout/style.css
@@ -20,3 +20,11 @@
     background-color: purple;
 
 }
+
+.ball{
+    width: 20px;
+    height: 20px;
+    border-radius: 10px;
+    background-color: red;
+    position: absolute;
+}
